k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: dr-highkali-api
spec:
  selector:
    app: dr-highkali-api
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
