k8s/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: dr-highkali-web
spec:
  selector:
    app: dr-highkali-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
