k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dr-highkali-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dr-highkali-web
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dr-highkali-api
                port:
                  number: 9090
